--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-1.txt
+﻿1.txt
+
+#忽略所有.a
+*.a
+
+#强制保留lib.a
+!lib.a
+
+
+#只忽略项目/TODO,其他目录/xxxx/TODO保留
+/TODO
+
+build
+
+#/debug/1.txt--->ignore
+#/debug/debug1/1.txt--->exist
+debug/*.txt
+
+#/debug2/1.txt--->ignore
+#/debug2/debug1/1.txt--->ignore
+debug2/**/*.txt
